# rivals_counter_peaks

./: .gitignore  .rooignore  Cargo.toml  OTA_ARCHITECTURE_SPEC.md  build.py  build.rs  dev.nix  display.py  find_objects_azake_dino2.py  find_objects_sliding_window_with_padding.py  game_entities_dict.json  gui.py  heroes_bd.py  images_load.py  logic.py  main.py  main.spec  new_tasks.md  notes_work_history.md  pastemax.py  recognition.py  requirements.txt  rivals_counter.spec  rivals_counter_1.01.spec  shell.nix  test_tab_mode_fix.py  todo.md  translations.js  translations.py
agent_ignore/: apply_map_mapping.py  update_db_rivalsmeta.py
agent_utils/: apply_last_changes.md
build_scripts/: build.py  hook-tqdm.py  hook-transformers.py  manifest.xml  maps.py  old_data.py  old_heroes_compositions.json  rivals_counter_peaks.spec  update_db_rivalsmeta.py  update_icons_of_heroes.py
core/: _version.py  action_controller.py  advanced_recognition_logic.py  app_settings_keys.py  app_settings_manager.py  appearance_manager.py  build.py  change_control_doc.md  config.py  delegate.py  dialogs.py  display.py  event_bus.py  favorite_heroes_tab.py  gui.py  hero_recognition_system.py  heroes_bd.py  hook-keyboard.py  horizontal_list.py  hotkey_config.py  hotkey_manager.py  hotkey_manager_global.py  hotkey_parser_utils.py  hotkeys.py  image_manager.py  image_processing_utils.py  images_load.py  keyboard_hotkey_adapter.py  left_panel.py  log_handler.py  logic.py  main.py  main_window.py  main_window_refactored.py  mode.py  mode_manager.py  model_loader_worker.py  overwolf_server.py  recognition.py  right_panel.py  (+18 more)
database/: game_entities_dict.json  heroes_bd.py  heroes_compositions.json  maps.json  maps.py  marvel_rivals_stats_20250810-055947.json  marvel_rivals_stats_20250831-030213.json  marvel_rivals_stats_20250909-092742.json  marvel_rivals_stats_20251017-202023.json  marvel_rivals_stats_20251122-202738.json  marvel_rivals_stats_20251229-074503.json  marvel_rivals_stats_20260401-122707.json  marvel_rivals_stats_20260402-031716.json  old3.json  old_bd.py  old_format1.json  roles.json  roles_and_groups.py  stats_loader.py
db/: marvel_rivals_stats_20260426-091015.json
info/: en_US.json  (+2 more)
(+228 files in other folders)
