[package]
name = "rust_rivals"
version = "0.1.0"
edition = "2021"
description = "Marvel Rivals team counter-pick assistant"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
regex = "1"
# Обновляем версию image до 0.25 для совместимости с xcap и другими крейтами
image = "0.25"
ort = { version = "2.0.0-rc.10" }
npy = "0.4"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-npy = "0.8"
xcap = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
global-hotkey = "0.4"
directories = "5.0"
arboard = "3.3"
chrono = { version = "0.4", features = ["serde"] }
imageproc = "0.23.0"
lazy_static = "1.4.0"
akaze = "0.1"

# ICED GUI framework
iced = { version = "0.12", features = ["tokio", "image", "svg", "canvas"] }

[build-dependencies]
embed-resource = "2.5.2"
# Добавляем зависимости для автоматической конвертации PNG в ICO
image = "0.25"
ico = "0.3.0"


[[test]]
name = "check_recognition"
path = "tests/check_recognition.rs"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[package.metadata.windows]
icon = "resources/logo.png"